Estruturando o layout da página.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
 </head>
 
 <body>
+  <div id="app">
+    <main>
+      <div class="main-container">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolorum repudiandae quas doloremque. Unde corporis
+        beatae ab dolor quasi necessitatibus ducimus, ipsum explicabo, numquam veniam nemo cupiditate eaque pariatur
+        veritatis.
+      </div>
+    </main>
+
+    <aside>
+      <div class="aside-container">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non doloremque error nam praesentium, soluta distinctio
+        voluptates minima hic cumque itaque perferendis dolorem maiores eum molestiae nobis, tenetur quia, at amet.
+      </div>
+    </aside>
+  </div>
 
 </body>
 
