--- a/index.html
+++ b/index.html
@@ -19,16 +19,25 @@
   <div id="app">
     <main>
       <div class="main-container">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolorum repudiandae quas doloremque. Unde corporis
-        beatae ab dolor quasi necessitatibus ducimus, ipsum explicabo, numquam veniam nemo cupiditate eaque pariatur
-        veritatis.
+        <div id="back">
+          <img src="assets/icons/arrow-left-02.svg" alt="Ícone de voltar">
+          <span>Voltar</span>
+        </div>
+
+        <h1>Formulário de matrícula</h1>
+        <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
       </div>
     </main>
 
     <aside>
       <div class="aside-container">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non doloremque error nam praesentium, soluta distinctio
-        voluptates minima hic cumque itaque perferendis dolorem maiores eum molestiae nobis, tenetur quia, at amet.
+        <header>
+          <img src="assets/logo.svg" alt="Logo Estrelas do Amanhã">
+          <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
+          <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+        </header>
+
+        <img src="assets/Illustration.svg" alt="Ilustração de uma professora com quatro crianças ensinando desenhos">
       </div>
     </aside>
   </div>
