Ajustes no CSS do aside e main.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div id="app">
     <main>
       <div class="main-container">
-        <div id="back">
+        <div class="back">
           <img src="assets/icons/arrow-left-02.svg" alt="Ícone de voltar">
           <span>Voltar</span>
         </div>
