--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
           <fieldset class="gardian">
             <legend>Informações do responsável</legend>
-            
+
             <div class="input-wrapper">
               <label for="gardian">Nome do responsável</label>
               <input type="text" id="gardian" name="gardian">
@@ -129,6 +129,31 @@
               <div class="error">
                 <img src="assets/icons/alert-circle.svg" alt="Ícone de alerta vermelho">
                 <span>Insira um e-mail válido</span>
+              </div>
+            </div>
+          </fieldset>
+
+          <fieldset class="enroll-options">
+            <legend>Opções de matrícula</legend>
+
+            <div class="input-wrapper">
+              <label>Selecione o turno de estudo</label>
+              <div class="radio-wrapper">
+                <div class="radio-inner">
+                  <div class="radio-image">
+                    <input type="radio" name="study-shift" value="morning" id="morning">
+                    <img src="assets/icons/sun-cloud-02.svg" alt="Ícone de sol com núvem">
+                    <label for="morning">Manhã</label>
+                  </div>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image">
+                    <input type="radio" name="study-shift" value="evening" id="evening">
+                    <img src="assets/icons/sun-02.svg" alt="Ícone de sol com núvem">
+                    <label for="evening">Tarde</label>
+                  </div>
+                </div>
               </div>
             </div>
           </fieldset>
