--- a/index.html
+++ b/index.html
@@ -140,19 +140,17 @@
               <label>Selecione o turno de estudo</label>
               <div class="radio-wrapper">
                 <div class="radio-inner">
-                  <div class="radio-image">
-                    <input type="radio" name="study-shift" value="morning" id="morning">
-                    <img src="assets/icons/sun-cloud-02.svg" alt="Ícone de sol com núvem">
-                    <label for="morning">Manhã</label>
-                  </div>
+                  <div class="radio-image"></div>
+                  <input type="radio" name="study-shift" value="morning" id="morning">
+                  <img src="assets/icons/sun-cloud-02.svg" alt="Ícone de sol com núvem">
+                  <label for="morning">Manhã</label>
                 </div>
 
                 <div class="radio-inner">
-                  <div class="radio-image">
-                    <input type="radio" name="study-shift" value="evening" id="evening">
-                    <img src="assets/icons/sun-02.svg" alt="Ícone de sol com núvem">
-                    <label for="evening">Tarde</label>
-                  </div>
+                  <div class="radio-image"></div>
+                  <input type="radio" name="study-shift" value="evening" id="evening">
+                  <img src="assets/icons/sun-02.svg" alt="Ícone de sol com núvem">
+                  <label for="evening">Tarde</label>
                 </div>
               </div>
             </div>
